--- a/小薇学院/任务二：零基础HTML及CSS编码（一）/index.css
+++ b/小薇学院/任务二：零基础HTML及CSS编码（一）/index.css
@@ -121,14 +121,24 @@ aside input[type="submit"]{
     border-radius: 10px;
 }
 form textarea{
-    width: 600px;
+    width: 400px;
 }
-form input[type="text"],form input[type="email"]{
-}
-form .formitem{
+.formleft{
+    float: left;
     width: 500px;
-    margin:10px auto;
+    text-align: right;
+    line-height: 30px;
 }
-form .formtitle{
-    width: 200px;
+.formright{
+    float: left;
+    width: 500px;
+    line-height: 30px;
+}
+footer{
+    background: #000000;
+    color: white;
+    text-align: center;
+    line-height: 60px;
+    height: 50px;
+    font-size: 10px;
 }
