--- a/小薇学院/任务二：零基础HTML及CSS编码（一）/index.css
+++ b/小薇学院/任务二：零基础HTML及CSS编码（一）/index.css
@@ -125,13 +125,13 @@ form textarea{
 }
 .formleft{
     float: left;
-    width: 500px;
+    width: 40%;
     text-align: right;
     line-height: 30px;
 }
 .formright{
     float: left;
-    width: 500px;
+    width: 40%;
     line-height: 30px;
 }
 footer{
