--- a/小薇学院/任务三：三栏式布局/index.css
+++ b/小薇学院/任务三：三栏式布局/index.css
@@ -21,11 +21,8 @@ div.center{
     background: #eee;
 }
 aside.aside_right{
-    position: absolute;
-    top:0;
-    right: 0px;
-    margin: 20px 20px;
     float: right;
+    margin: 20px 20px;
     width: 120px;
     border: 1px solid #aaaaaa;
     border-radius: 5px;
@@ -38,19 +35,11 @@ aside.aside_right{
     position: static;
     margin-left:240px;
     margin-right: 160px;
+    padding: 10px;
     width: auto;
     border: 1px solid #aaaaaa;
     border-radius: 5px;
     background: white;
-}
-.clearfloat{
-    clear: both;
-}
-
-.footer{
-    height: 40px;
-    width: 100%;
-    background: orange;
 }
 
 #img_dog{
@@ -70,8 +59,18 @@ article.center{
     width: 93%;
     padding: 10px 20px;
 }
-article.center p{
+div.center p{
     text-indent: 2em;
     line-height: 25px;
     margin: 7px 0;
+
+}
+.clearfloat{
+    clear: both;
+}
+
+.footer{
+    height: 40px;
+    width: 100%;
+    background: orange;
 }
